--- a/about.html
+++ b/about.html
@@ -90,14 +90,7 @@
                         <div id="slider2" class="image-slider-wrapper relative swiper-container">
                             <div class="swiper-wrapper image-slider slider">
                                 <div class="swiper-slide">
-                                    <img src="images/about_img_01.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="images/about_img_02.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="images/about_img_03.jpg" alt="">
-                                </div>
+                                    <img src="images/apropos.jpg" alt="">
                             </div>
                             <div class="clear"></div>
                         </div>                          
