--- a/contact.html
+++ b/contact.html
@@ -82,12 +82,11 @@
                                 <strong>Contact</strong>
                             </p>
                             <p>
-                                Nous avons choisi d'aller sur la lune au cours de cette décennie et de faire les autres choses, non pas parce qu'elles sont faciles.
+                                Hey! Si vous venez par ici, c'est que vous aviez des choses à me dire ? 
                             </p>
                             <br>
                             <p>
-                                Parce qu'ils sont difficiles, parce que cet objectif servira à organiser et à mesurer le meilleur de nos énergies et de nos compétences, 
-                                parce que ce défi est un défi que nous sommes prêts à accepter, un défi que nous ne sommes pas prêts à reporter et un défi que nous sommes prêts à relever.
+                                Je serai ravie de répondre à vos questions. Vous pouvez me contacter via Instagram, Behance ou bien par mail.
                             </p>
                             <br>
                             <p class="contact-info">
