--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="fr-FR">
     <head>
         <title>Kapena - Minimal Portfolio HTML Template</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -45,28 +45,20 @@
                             <ul class="main-menu sm sm-clean">
                                 <li class="menu-item-has-children">
                                     <a href="index.html">
-                                        Home
+                                       <b> Accueil </b>
                                     </a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="home-box.html">Home + Box</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html"> <b> Service </b>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
+                                    <a href="about.html"> <b> À propos </b>
+                                    </a>
+                                </li>   
                                 <li>
-                                    <a href="team.html">Team</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html"> <b> Contact </b>
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -95,10 +87,10 @@
                         <div class="info-code-holder">                            
                             <div class="info-code">
                                 <p class="info-code-title">
-                                    PROJECT
+                                    PROJET
                                 </p>
                                 <p class="info-code-content">
-                                    Corporate Branding
+                                    Peps Home
                                 </p>
                             </div>
 
@@ -107,7 +99,7 @@
                                     CLIENT
                                 </p>
                                 <p class="info-code-content">
-                                    Envato Studio
+                                    Famille Windsor (couple + 2 enfants)
                                 </p>
                             </div>
 
@@ -116,16 +108,16 @@
                                     DATE
                                 </p>
                                 <p class="info-code-content">
-                                    September 2018
+                                    22 janvier 2024
                                 </p>
                             </div>
 
                             <div class="info-code">
                                 <p class="info-code-title">
-                                    DESIGNER
+                                    ARCHITECTE D'INTÉRIEUR & DESIGNER
                                 </p>
                                 <p class="info-code-content">
-                                    John Petters
+                                    Noémie NERO
                                 </p>
                             </div>
                         </div>
@@ -134,15 +126,23 @@
                     <div class="two_third last">
                         <h1>PAVILLON AVEC EXTENSION</h1>
                         <div class="medium-text">
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic 
-                            ocean roxysm of global death rich in heavy atoms with miles away from sun.
+                            Rénovation intérieur du pavillon de 220 m² + terrasse de 43.2 m² Création d’une extension de 100 m² (surface de plancher) maximum, sur 1 ou 2 niveaux.
                         </div>
                         <br>
                         <p>
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean 
-                            paroxysm of global death rich in heavy atoms with pretty stories for which there’s little good evidence 
-                            something incredible is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean 
-                            inconspicuous motes of rock.
+                            CAHIER DES CHARGES:
+                        <br>
+                            - Famille avec deux enfants de 6 et 9 ans
+                            - Un des parents est architecte et travaille de temps en temps à la maison, il lui faut donc un espace de travail à domicile.
+                            - L’organisation de l’espace doit comprendre (minimum) :
+                              Espace Cuisine, salle à manger/salon
+                              Un Bureau (minimum 10m²)
+                              Deux chambres dont une avec salle de bain
+                              Deux wc (un par niveau)
+                              Une salle de bain
+                              La circulation verticale
+                        <br>
+                            Pour l’extension : Ajouter une chambre avec salle de bain & wc avec entrée independante + agrandir salon/salle à manger/cuisine... (au choix).
                         </p>
                     </div>                    
                     <div class="clear"></div>                        
@@ -164,23 +164,23 @@
                 <div class="footer-content center-relative">
                     <img class="footer-logo" src="images/divider_01.png" alt="Kapena">
                     <div class="copyright-holder content-1170 center-relative"> 
-                        © 2018. Made by <a href="https://cocobasic.com/">Coco+Basic.</a>
+                        <b> © 2024. Créé par Noémie N.</b>
                     </div>
 
                     <div class="social-holder content-1170 center-relative"> 
-                        <a href="#">
-                            <span class="fa fa-twitter"></span>
+                        <a href="https://instagram.com/">
+                            <span class="fa fa-instagram"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://facebook.com/">
                             <span class="fa fa-facebook"></span>
                         </a> 
-                        <a href="#">
-                            <span class="fa fa-youtube-play"></span>
+                        <a href="https://youtube.com/">
+                            <span class="fa fa-youtube"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://pinterest.com/">
                             <span class="fa fa-pinterest-p"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://behance.net/">
                             <span class="fa fa-behance"></span>
                         </a>
                     </div>
