--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -45,28 +45,20 @@
                             <ul class="main-menu sm sm-clean">
                                 <li class="menu-item-has-children">
                                     <a href="index.html">
-                                        Home
+                                        <b> Accueil </b>
                                     </a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="home-box.html">Home + Box</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html"> <b> Service </b>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
+                                    <a href="about.html"> <b> À propos </b>
+                                    </a>
+                                </li>   
                                 <li>
-                                    <a href="team.html">Team</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html"> <b> Contact </b>
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -80,12 +72,14 @@
                     <h1 class="center-text">INFOGRAPHIE & COMMUNICATION GRAPHIQUE</h1>
                     <br>
                     <div class="one_half">
-                        With a warning label this big, you know they gotta be fun. Bring me the forms I need to fill out to have her taken away. 
-                        I decline the title of iron cook and accept the lesser title of zinc saucier.
+                        Par l'usage de logiciels telle que la suite Adobe, la création d'images numériques afin de communiqué un message précis.
                     </div>
                     <div class="one_half last">
-                        You probably haven’t heard of them before they sold out scenester literally readymade. Trust fund Thundercats flexitarian, 
-                        aesthetic Tumblr banjo freegan semiotics biodiesel master cleanse.
+                        1. Créer une identité visuelle à décliner sur des affiches, flyers, bannière web, carton et invitation pour l'évènement "Les journées de l'art des jardins urbains" au >Jardin des Plantes.
+                    <br>
+                        2. Créer une affiche en utilisant les masques d'écrêtage et fusion.
+                    <br>
+                        3. Créer une affiche pour le Théâtre Dunois en réalisant un photomontage.
                     </div>
                     <div class="clear"></div>
                     <br>                     
@@ -122,23 +116,23 @@
                 <div class="footer-content center-relative">
                     <img class="footer-logo" src="images/divider_01.png" alt="Kapena">
                     <div class="copyright-holder content-1170 center-relative"> 
-                        © 2018. Made by <a href="https://cocobasic.com/">Coco+Basic.</a>
+                        <b> © 2024. Créé par Noémie N.</b>
                     </div>
 
                     <div class="social-holder content-1170 center-relative"> 
-                        <a href="#">
-                            <span class="fa fa-twitter"></span>
+                        <a href="https://instagram.com/">
+                            <span class="fa fa-instagram"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://facebook.com/">
                             <span class="fa fa-facebook"></span>
                         </a> 
-                        <a href="#">
-                            <span class="fa fa-youtube-play"></span>
+                        <a href="https://youtube.com/">
+                            <span class="fa fa-youtube"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://pinterest.com/">
                             <span class="fa fa-pinterest-p"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://behance.net/">
                             <span class="fa fa-behance"></span>
                         </a>
                     </div>
