--- a/portfolio-5.html
+++ b/portfolio-5.html
@@ -45,28 +45,20 @@
                             <ul class="main-menu sm sm-clean">
                                 <li class="menu-item-has-children">
                                     <a href="index.html">
-                                        Home
+                                        <b> Accueil </b>
                                     </a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="home-box.html">Home + Box</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html"> <b> Service </b>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
+                                    <a href="about.html"> <b> À propos </b>
+                                    </a>
+                                </li>   
                                 <li>
-                                    <a href="team.html">Team</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html"> <b> Contact </b>
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -80,14 +72,11 @@
                     <div class="two_third">
                         <h1>CONCEPTS ET PROJETS DESIGN</h1>
                         <div class="medium-text">
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean roxysm 
-                            of global death rich in heavy atoms with miles away from sun.
+                            Sur cette page, des concepts sur différents types de design sont exposés.
                         </div>
                         <br>
                         <p>
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm 
-                            of global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible 
-                            is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean inconspicuous motes of rock.
+                            Ils sont à l'état de concept. Pour autant, cela montre une certaine polyvalence dans mon travail.
                         </p>
                     </div>
 
@@ -96,19 +85,18 @@
                         <div class="info-code">
                             <p class="info-code-title">PROJETS</p>
                             <p class="info-code-content"> 1. Set up MEAL
-                                                          2. Sketch Parfum Aston Martin
+                                <br>
+                                                          2. Jeu Pantone
+                                <br>
                                                           3. Pop up store pour la marque Puma
-                                                          4. Planches sur le thème : Le Vivant et la Ville </p>
-                        </div>
-
-                        <div class="info-code">
-                            <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">Envato Studio</p>
+                                <br>
+                                                          4. Mockup Shaman 
+                                <br>                      5. Sketch Parfum Aston Martin </p>
                         </div>
 
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">September 2018</p>
+                            <p class="info-code-content"> Depuis 2022</p>
                         </div>
 
                         <div class="info-code">
@@ -170,23 +158,23 @@
                 <div class="footer-content center-relative">
                     <img class="footer-logo" src="images/divider_01.png" alt="Kapena">
                     <div class="copyright-holder content-1170 center-relative"> 
-                        © 2018. Made by <a href="https://cocobasic.com/">Coco+Basic.</a>
+                        <b> © 2024. Créé par Noémie N.</b>
                     </div>
 
                     <div class="social-holder content-1170 center-relative"> 
-                        <a href="#">
-                            <span class="fa fa-twitter"></span>
+                        <a href="https://instagram.com/">
+                            <span class="fa fa-instagram"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://facebook.com/">
                             <span class="fa fa-facebook"></span>
                         </a> 
-                        <a href="#">
-                            <span class="fa fa-youtube-play"></span>
+                        <a href="https://youtube.com/">
+                            <span class="fa fa-youtube"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://pinterest.com/">
                             <span class="fa fa-pinterest-p"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://behance.net/">
                             <span class="fa fa-behance"></span>
                         </a>
                     </div>
