--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -45,28 +45,20 @@
                             <ul class="main-menu sm sm-clean">
                                 <li class="menu-item-has-children">
                                     <a href="index.html">
-                                        Home
+                                        <b> Accueil </b>
                                     </a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="home-box.html">Home + Box</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html"> <b> Service </b>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
+                                    <a href="about.html"> <b> À propos </b>
+                                    </a>
+                                </li>   
                                 <li>
-                                    <a href="team.html">Team</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html"> <b> Contact </b>
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -106,16 +98,22 @@
                     <h1>LES DIFFÉRENTES ÉTAPES DU PROJET</h1>
                     <br>
                     <div class="medium-text">
-                        Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean roxysm 
-                        of global death rich in heavy atoms with miles away from sun.
+                        En vue des JO de Paris en 2024, vous devez aménager une barge en
+                        choisissant un pays et transformer la barge à la manière d’un pavillon
+                        type Exposition Universelle.
+                        La Barge sera la vitrine du Porto Rico et accueillera du public comme une «fan zone».
                     </div>
 
                     <br>
 
                     <p>
-                        Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm 
-                        of global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible 
-                        is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean inconspicuous motes of rock.
+                        1) Emplacement de la Barge dans Paris intramuros.
+                    <br>
+                        2) Recherches sur le Porto Rico et les activités à agencer sur la barge.
+                    <br>
+                        3) Exécution du tracé des plans du rez-de-chuassée et de l'étage sur Autocad.
+                    <br>
+                        4) Mettre de la texture sur le plan et la coupe.
                     </p>
                 </div>
 
@@ -140,23 +138,23 @@
                 <div class="footer-content center-relative">
                     <img class="footer-logo" src="images/divider_01.png" alt="Kapena">
                     <div class="copyright-holder content-1170 center-relative"> 
-                        © 2018. Made by <a href="https://cocobasic.com/">Coco+Basic.</a>
+                        <b> © 2024. Créé par Noémie N.</b>
                     </div>
 
                     <div class="social-holder content-1170 center-relative"> 
-                        <a href="#">
-                            <span class="fa fa-twitter"></span>
+                        <a href="https://instagram.com/">
+                            <span class="fa fa-instagram"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://facebook.com/">
                             <span class="fa fa-facebook"></span>
                         </a> 
-                        <a href="#">
-                            <span class="fa fa-youtube-play"></span>
+                        <a href="https://youtube.com/">
+                            <span class="fa fa-youtube"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://pinterest.com/">
                             <span class="fa fa-pinterest-p"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://behance.net/">
                             <span class="fa fa-behance"></span>
                         </a>
                     </div>
