--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -45,28 +45,20 @@
                             <ul class="main-menu sm sm-clean">
                                 <li class="menu-item-has-children">
                                     <a href="index.html">
-                                        Home
+                                        <b> Accueil </b>
                                     </a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="home-box.html">Home + Box</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html"> <b> Service </b>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
+                                    <a href="about.html"> <b> À propos </b>
+                                    </a>
+                                </li>   
                                 <li>
-                                    <a href="team.html">Team</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html"> <b> Contact </b>
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -77,7 +69,7 @@
 
             <div class="portfolio-item-wrapper">
                 <div class="portfolio-content center-relative content-1170">
-                    <iframe src="https://player.vimeo.com/video/157276599?color=ffffff" width="640" height="360" allowfullscreen></iframe>
+                    <img src="images/fullscreenshotoff.jpg"alt="">
 
                     <div class="clear bottom-50"></div>
                     
@@ -85,10 +77,10 @@
                         <div class="service-item center-text relative">
                             <img class="service-icon" src="images/icon_1.png" alt="" />
                             <h3 class="service-title">
-                                Design
+                                Peps Home
                             </h3>
                             <div class="service-content"> 
-                                Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean blue.
+                                La maquette représente un pavillon composé d'un rez de chaussée et d'un étage. Une extension divisée en 2 parties (une à l'étage et une au rez de chaussée) avec ossature bois et baie vitrée se présente également. Elle est faite en carton bois, gris, rhodoïde et carton blanc ondulé.
                             </div>                                   
                         </div>                                
                     </div>
@@ -97,10 +89,11 @@
                         <div class="service-item center-text relative">
                             <img class="service-icon" src="images/icon_2.png" alt="" />
                             <h3 class="service-title">
-                                Backend
+                                Lanthern cavern Journey
                             </h3>
                             <div class="service-content"> 
-                                Global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible
+                                Cette maquette est représentative d'un labyrinthe souterrain en forme d'un poisson des abysses.
+                                Elle est faite en argile rouge.
                             </div>                                    
                         </div>                                
                     </div>
@@ -109,10 +102,10 @@
                         <div class="service-item center-text relative">
                             <img class="service-icon" src="images/icon_3.png" alt="" />
                             <h3 class="service-title">
-                                Media
+                                Villa Savoye
                             </h3>
                             <div class="service-content"> 
-                                Evidence something incredible iswaiting to be known not a sunrise but a galaxyrise shores of the cosmic.
+                                Cette représentation volumique de cette oeuvre architecturale du Corbusier matérialise les 5 piliers de l'architecture moderne.
                             </div>                                    
                         </div>                                
                     </div>
@@ -128,19 +121,19 @@
 
                             <div class="swiper-slide">
                                 <div class="slider-text-holder"> 
-                                    The goal of a designer is to listen, observe, synthesize, and glean insights that enable him or her to make the invisible visible
+                                    L'objectif du designer est d'écouter, d'observer, de synthétiser et de glaner des informations qui lui permettent de rendre visible l'invisible.
                                 </div>                                        
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="slider-text-holder"> 
-                                    All architecture is shelter, all great architecture is the design of space that contains, cuddles, exalts, or stimulates the persons in that space
+                                    Toute architecture est un abri, toute grande architecture est la conception d'un espace qui contient, cajole, exalte ou stimule les personnes qui s'y trouvent.
                                 </div>                                        
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="slider-text-holder"> 
-                                    As an architect, you design for the present, with an awareness of the past, for a future which is essentially unknown.
+                                    En tant qu'architecte, vous concevez pour le présent, avec une conscience du passé, pour un futur qui est essentiellement inconnu.
                                 </div>                                       
                             </div>                                    
                         </div>                            
@@ -169,23 +162,23 @@
                 <div class="footer-content center-relative">
                     <img class="footer-logo" src="images/divider_01.png" alt="Kapena">
                     <div class="copyright-holder content-1170 center-relative"> 
-                        © 2018. Made by <a href="https://cocobasic.com/">Coco+Basic.</a>
+                        <b> © 2024. Créé par Noémie N.</b>
                     </div>
 
                     <div class="social-holder content-1170 center-relative"> 
-                        <a href="#">
-                            <span class="fa fa-twitter"></span>
+                       <a href="https://instagram.com/">
+                            <span class="fa fa-instagram"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://facebook.com/">
                             <span class="fa fa-facebook"></span>
                         </a> 
-                        <a href="#">
-                            <span class="fa fa-youtube-play"></span>
+                        <a href="https://youtube.com/">
+                            <span class="fa fa-youtube"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://pinterest.com/">
                             <span class="fa fa-pinterest-p"></span>
                         </a> 
-                        <a href="#">
+                        <a href="https://behance.net/">
                             <span class="fa fa-behance"></span>
                         </a>
                     </div>
